Update api server configuration and regenerate api client code
